<resources>
    <string name="app_name">Currency Converter</string>
    <string name="all_currencies">ALL CURRENCIES</string>
    <string name="service_unavailable">Service Temporary Unavailable Please Try Later</string>
    <string name="view_all_currencies">View All Currencies</string>
    <string name="make_a_conversion">Make a Conversion</string>
    <string name="currencies_converter">Currencies Converter</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="fromXtoY">%1$s -> %2$s</string>
    <string name="conversion_result">%1$s %2$s = %3$s %4$s</string>
    <string name="amount">amount</string>
    <string name="convert">CONVERT</string>
    <string name="error_internet">Error communicating with the server</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="currency_not_selected">Currency not selected</string>
    <string name="select_currency">Please select currencies for conversion</string>

</resources>
