<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.celik.convocurrency.util.RecyclerViewBindingKt" />

        <variable
            name="data"
            type="com.example.celik.convocurrency.ui.viewmodels.ConvertCurrenciesViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/currencies_converter"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:orientation="vertical"
            android:visibility="@{data.recyclerViewVisible}"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/from"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fromRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:scrollbars="vertical"
                app:adapter="@{data.fromAdapter}"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/to"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/toRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:paddingTop="5dp"
                android:scrollbars="vertical"
                app:adapter="@{data.toAdapter}"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:inputType="numberDecimal"
                    android:hint="@string/amount"
                    android:gravity="center"
                    android:text="@={data.amount}"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:paddingTop="10dp"
                    android:text="@{data.conversionItems}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/convert"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:onClick="@{() -> data.convertValues()}"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/empty_state_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/service_unavailable"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{data.emptyStateVisible}" />
    </RelativeLayout>
</layout>

